test: Add test infrastructure

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@ node_modules
 # Build output
 build
 
+# Test coverage output
+coverage
+
 # ------------------------------------------------------------------------------
 # Global: files
 
