--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "serve-dev": "webpack serve --config config/webpack/development.ts --env ENV_PATH=.env.dev",
     "build-prod": "webpack build --config config/webpack/production.ts --env ENV_PATH=.env.prod",
+    "test": "jest --config config/jest.ts",
     "type": "tsc --project config/tsconfig.json --noEmit",
     "lint": "eslint --config config/eslint.json config src",
     "format": "yarn prettier --write",
@@ -25,6 +26,7 @@
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
     "@babel/runtime": "^7.15.4",
+    "@types/jest": "^27.0.2",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "@types/react-redux": "^7.1.18",
@@ -41,7 +43,9 @@
     "eslint-plugin-react-redux": "^3.3.2",
     "html-webpack-plugin": "^5.3.2",
     "husky": "^7.0.2",
+    "jest": "^27.2.2",
     "prettier": "^2.4.1",
+    "ts-jest": "^27.0.5",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.2.1",
     "tsconfig-paths-webpack-plugin": "^3.5.1",
